clpaas-test/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-nginx1
  namespace: dev
  labels:
    dev: dev-nginx1
spec:
  replicas: 2
  selector:
    matchLabels:
      dev: dev-nginx1
  template:
    metadata:
      labels:
        dev: dev-nginx1
    spec:
      containers:
      - name: dev-nginx1
        image: nginx:latest 
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-nginx2
  namespace: dev
  labels:
    dev: dev-nginx2
spec:
  replicas: 2
  selector:
    matchLabels:
      dev: dev-nginx2
  template:
    metadata:
      labels:
        dev: dev-nginx2
    spec:
      containers:
      - name: dev-nginx2
        image: nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
