clpaas-test/base/service.yaml

# test1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev1-service
  namespace: dev
spec:
  selector:
    dev: dev-nginx1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP

---

# test2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev2-service
  namespace: dev
spec:
  selector:
    dev: dev-nginx1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
